Добавлена страница "Информации" и переходы к этой странице в приложении

--- a/src/main/resources/templates/instruction.html
+++ b/src/main/resources/templates/instruction.html
@@ -16,8 +16,41 @@
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="" aria-current="true"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4" class=""></button>
     </div>
+
     <div class="carousel-inner">
+
+        <div class="carousel-item active">
+            <svg class="d-block" width="100%" height="820"  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="#777"></rect>
+            </svg>
+
+            <div class="container">
+                <div class="carousel-caption text-start">
+                    <form action="/startPage">
+                        <button type="submit" class="btn-close" aria-label="Close"></button>
+                    </form>
+                    <h1>Добрый день. Я проведу небольшую инструкцию как пользоваться приложением.</h1>
+                    <h4>1.</h4>
+                    <img src="/images/start_1.png" height="170">
+                    <p>
+                        После авторизации вы попадаете на главную странцу с списками покупок - пока он пуст,
+                        но вы можете добавить свой первый список нажав на кнопку "добавить."
+                    </p>
+
+                    <br>
+
+                    <h4>2.</h4>
+                    <img src="/images/start_2.png" height="250" width="900">
+                    <p>
+                        После авторизации вы попадаете на главную странцу с списками покупок - пока он пуст,
+                        но вы можете добавить свой первый список нажав на кнопку "добавить."
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <div class="carousel-item">
             <svg class="d-block" width="100%" height="800"  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <rect width="100%" height="100%" fill="#777"></rect>
@@ -25,34 +58,89 @@
 
             <div class="container">
                 <div class="carousel-caption text-start">
-                    <h1>Example headline.</h1>
-                    <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                    <form action="/startPage">
+                        <button type="submit" class="btn-close" aria-label="Close"></button>
+                    </form>
+                    <h1>3.</h1>
+                    <img src="/images/start_3.png" height="170">
+                    <p>
+                        После создания нового списка - в него можно добавить товары, нажав на кнопку "Редактировать" или удалить по кнопке "Удалить".
+                        Нажав на сам список - проваливаетесь в режим осуществленния покупки.
+                    </p>
+
+                    <br>
+
+                    <h1>4.</h1>
+                    <img src="/images/start_4.png" height="220">
+                    <p>
+                        В текстовом поле вводим тот продукт, который хотим добавить для дальнейшей покупки и нажимаем кнопку "Найти".
+                        Поиск осуществляется только в магазинах сети "Перекрёсток" (цена согласно магахинной).
+                    </p>
+
                 </div>
             </div>
-
         </div>
+
         <div class="carousel-item">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <svg class="d-block" width="100%" height="800"  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="#777"></rect>
+            </svg>
 
             <div class="container">
-                <div class="carousel-caption">
-                    <h1>Another example headline.р</h1>
-                    <p>Some representative placeholder content for the second slide of the carousel.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                <div class="carousel-caption text-start">
+                    <form action="/startPage">
+                        <button type="submit" class="btn-close" aria-label="Close"></button>
+                    </form>
+                    <h1>5.</h1>
+                    <img src="/images/start_5.png" height="260">
+                    <p>
+                        Среди всех найденных товарах выберите нужный, укажите количество и нажимайте "добавить".
+                        Если вы не нашли нужный вам товар, то попробуйте написать более конкретный запрос
+                        (Перечень товара реализован согласно товарам из сети "Перекрёсток").
+                    </p>
+
+                    <br>
+
+                    <h1>6.</h1>
+                    <img src="/images/start_8.png" height="170">
+                    <p>
+                        Для перехода в режим осуществленния покупок по списку нужно провалиться в список, как на картинке.
+                    </p>
+
                 </div>
             </div>
         </div>
-        <div class="carousel-item active">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+
+
+        <div class="carousel-item">
+            <svg class="d-block" width="100%" height="800"  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="#777"></rect>
+            </svg>
 
             <div class="container">
-                <div class="carousel-caption text-end">
-                    <h1>One more for good measure.</h1>
-                    <p>Some representative placeholder content for the third slide of this carousel.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                <div class="carousel-caption text-start">
+                    <form action="/startPage">
+                        <button type="submit" class="btn-close" aria-label="Close"></button>
+                    </form>
+                    <h1>7.</h1>
+                    <img src="/images/start_6.png" height="260">
+                    <p>
+                        В режиме покупок два поля: левое - точ то нужно купить, правое - то что уже купленно.
+                        Для того, что бы товар из левого поля перешёл в правое - ноужно нажать на кнопку "Галочку".
+                    </p>
+
+                    <br>
+
+                    <h1>8.</h1>
+                    <img src="/images/start_7.png" height="240">
+                    <p>
+                        Так же товар из правого поля можно отменить, нажав на кнопку "Отмена"
+                    </p>
+
                 </div>
             </div>
         </div>
+
     </div>
 
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
