Добавлен endpoint к стартовой странице профиля.

--- a/src/main/resources/templates/check_delete_spisok.html
+++ b/src/main/resources/templates/check_delete_spisok.html
@@ -26,7 +26,7 @@
             </a>
             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 34px);" data-popper-placement="bottom-start">
                 <li><a class="dropdown-item" href="#">Настройка</a></li>
-                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item" >Профиль</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Выйти</a></li>
             </ul>
